--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -34,10 +34,14 @@
 
 			<h1>Experiment X - Subject/Topic</h1>
 
-			<div class="minor-section">
-				<div id="canvas-container">
-					<!-- canvas will be added here -->
-				</div>
+			<button id="clicker">
+				Roll New Player
+			</button>
+			<div
+				style="font-family: georgia; border: thin solid gray; padding: 1em; margin: 1em; box-shadow: 2px 2px 5px gray; background: #ffe;"
+				id="box"
+			></div>
+			
                 <div class="fullscreen-box">
                     <button id="fullscreen">Fullscreen</button>
                 </div>
