--- a/experiment2/index.html
+++ b/experiment2/index.html
@@ -45,17 +45,17 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>This project sought to generate different variations of a sunset behind a line of mountains.</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>I used a noise function to draw the mountains and a series of pseudo random number generators to generate the position of the sun and the stars. I also used lerping to create a gradient effect to emulate the sunset. </p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p>It was hard getting started at first. I think before I started coding I had no idea how to make the end image but once I started adding layers, everything just fell into place. </p>
 			</div>
 
 		</section>
