--- a/experiment3.5/index.html
+++ b/experiment3.5/index.html
@@ -32,7 +32,7 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment 3 - Dungeon</h1>
+			<h1>Experiment 3 - Overworld</h1>
 
 			<div class="minor-section">
 				<button id="reseedButton">
