--- a/experiment3.5/index.html
+++ b/experiment3.5/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<!-- This title is used for tabs and bookmarks -->
-	<title>Experiment X - Subject/Topic</title>
+	<title>Experiment 3 - Overworld</title>
 
 	<!-- Use UTF character set, a good idea with any webpage -->
 	<meta charset="UTF-8" />
@@ -50,17 +50,23 @@
 
 			<div class="minor-section">
 				<h2>Description</h2>
-				<p>What are you trying to acomplish with this experiment?</p>
+				<p>This program generates an overworld with inspiration drawn from route 204 from Pokemon. </p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Technical</h2>
-				<p>Describe in detail what you did technically and how it works?</p>
+				<p>The world is generated using the random function at the core of each component. The forests always create a border on the east and the west but will vary in depth. 
+					The density of the trees around the edges of the forest are also randomly generated to create some variety. The path is also randomly generated but with
+					heavy constraints to maintain some consistancy. The starting position of the path varies between the north and the south and is constrained to be in a relatively central
+					location around the center of the screen.  
+				</p>
 			</div>
 
 			<div class="minor-section">
 				<h2>Reflection</h2>
-				<p>Each person that worked on the code should reflect on the process, the difficulties, and the successes of the experiment.</p>
+				<p>I had a hard time with thinking of ways to utilize noise and other forms of randomness. I found a few ways to use random but most elements are pretty similar in their generation methods. 
+					Most of this is due to starting late and not dedicating enough time to finding sources to imitate and learn from. Even though the end result wasn't what I was aiming for initially, I was still
+				happy with the lake shapes that I was able to generate by overlapping smaller rectangles. </p>
 			</div>
 
 		</section>
