--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     <li><a href="./experiment2/index.html">Experiment 2</a></li>
                     <li><a href="./experiment3/index.html">Experiment 3</a></li>
 					<li><a href="./experiment3.5/index.html">Experiment 3.5</a></li>
+					<li><a href="./experiment4/index.html">Experiment 4</a></li>
+					<li><a href="./experiment4.1/index.html">Experiment 4.1</a></li>
+					<li><a href="./experiment4.2/index.html">Experiment 4.2</a></li>
                 </ul>
             </div>
 
