--- a/experiment1/index.html
+++ b/experiment1/index.html
@@ -32,7 +32,7 @@
 	<main id="content">
 		<section>
 
-			<h1>Experiment X - Subject/Topic</h1>
+			<h1>Experiment 1</h1>
 
 			<button id="clicker">
 				Roll New Player
